# Level-Headed_Data

./: .gitignore  Music Blacklist.txt
ASM/: Bouncy Spiny Eggs.asm  Real Time.asm  SMB Utility Compatibility.hexp  SMB1.asm  Spiny Eggs Chase Mario.asm  Spiny Eggs Explode Into Fire.asm  Start with Fireflower.asm  Underwater Music Template.hexp
Doc/: SMB1 Music w7n v13.txt  smb1hex.txt
Graphics/: + Neon Edition (by Captain Gastronomicon).hexp  + Silhouette Mario Bros. (by Leon Arnott).hexp  All Night Nippon (by Nintendo).hexp  All Night Nippon 2 (by teeporage777).hexp  Curse from the Outskirts (by Dr. Mario).hexp  Desert Land (by Green Jerry).hexp  Dream Mario Bros. (by TheSuperShow).hexp  EDS (by Googie).hexp  Final Quest (by EBS).hexp  Fuji (by JY Co.).hexp  Garuna.hexp  HF (by HF Games).hexp  HF 1 (by HF Games).hexp  HF 2 (by HF Games).hexp  Harmony7 (Googie's Mod).hexp  Harmony7.hexp  Harvett Fox (by HarvettFox96).hexp  Hyper Mario (Rev A).hexp  Hyper Mario (Rev B).hexp  Josiah Winslow.hexp  Kiri5 Star (by Kirikaze).hexp  Let's Kill Iggy (by Captain Gastronomicon).hexp  Link Bros.hexp  Lost Levels (by Captain Antonio Falcon).hexp  Luigi and the New Quest (by DarKnight13).hexp  Luigi's Chronicles (Palette 1) (by Googie).hexp  Luigi's Chronicles (Palette 2) (by Googie).hexp  Luigi's Chronicles (by Googie).hexp  Luigi's First Quest (by ROMulus).hexp  Luigi's Summer Adventure (by teeporage777).hexp  Mario 2001.hexp  Mario Bros. Untold (by Dark_Lord05).hexp  Mario in Zebes (by Slimeous).hexp  Mikamari 1 (by Mikachu).hexp  Mikamari 2 (by Mikachu).hexp  Mikamari 3 (by Mikachu).hexp  Mikamari 4 (by Mikachu).hexp  Mushroom Nightmare (by Shadic).hexp  NEW (by Byvegeta).hexp  New Mario Bros. (Palette 1) (by Super Stiviboy).hexp  (+42 more)
Graphics/Bone Caster/: Dream Mario Bros. (by TheSuperShow).hexp
Graphics/Coin Flinger/: Paradyce with SMB2 Enemies (by Insectduel).hexp
Graphics/Cutter Flower/: Dream Mario Bros. (by TheSuperShow).hexp  Paradyce with SMB1 Enemies (Palette 1) (by Insectduel).hexp  Paradyce with SMB2 Enemies (by Insectduel).hexp  Super Mario Bros. DX v2.0 (by flamepanther).hexp  Super Mario Bros. DX v3.4 (by flamepanther).hexp
Graphics/Double Jump Star/: Dream Mario Bros. (by TheSuperShow).hexp  Paradyce with SMB2 Enemies (by Insectduel).hexp  Super Mario Bros. DX v2.0 (by flamepanther).hexp
Graphics/Fire Bros/: + Silhouette Mario Bros. (by Leon Arnott).hexp  Paradyce with SMB2 Enemies (by Insectduel).hexp  Super Mario S (by Sogun).hexp
Graphics/Fire Star/: + Silhouette Mario Bros. (by Leon Arnott).hexp  New Mario Bros. (Palette 1) (by Super Stiviboy).hexp  New Mario Bros. (Palette 2) (by Super Stiviboy).hexp  Paradyce with SMB2 Enemies (by Insectduel).hexp  Super Mario Bros. DX v2.0 (by flamepanther).hexp  Super Mario Bros. DX v3.4 (by flamepanther).hexp
Graphics/Hammer Suit/: Dream Mario Bros. (by TheSuperShow).hexp  Hyper Mario (Rev A).hexp  New Mario Bros. (Palette 1) (by Super Stiviboy).hexp  New Mario Bros. (Palette 2) (by Super Stiviboy).hexp  Paradyce with SMB1 Enemies (Palette 1) (by Insectduel).hexp  Paradyce with SMB2 Enemies (by Insectduel).hexp  Pocket Edition (by Fantendo).hexp  Super Mario Bros. DX v3.4 (by flamepanther).hexp
Graphics/Luigi's Fire Flower/: Dream Mario Bros. (by TheSuperShow).hexp
Graphics/Mario/: + Link (by Dr. Mario).hexp  + Luigi (by Googie).hexp  + Peach (by Googie).hexp  + Peach.hexp  + Sonic (by Kengen).hexp  + Toad (by AlexAR).hexp  + Wario (by Sics).hexp  + Yoshi (by teeporage777).hexp  Hyper Mario.hexp  Hyper.hexp  Josiah Winslow's Mario.hexp  MCB.hexp  Original (by Nintendo).hexp  SMB1 Modern.hexp  SMB1 Resprited.hexp  SMB2.hexp  SMB3.hexp  SMW.hexp
Graphics/Poison Bubbles/: New Mario Bros. (Palette 2) (by Super Stiviboy).hexp  Paradyce with SMB1 Enemies (Palette 1) (by Insectduel).hexp  Paradyce with SMB2 Enemies (by Insectduel).hexp  Super Duper Mario Bros. (by Tabmok99).hexp  Super Mario Bros. DX v3.4 (by flamepanther).hexp
Graphics/Title Screen 1P/: Harvett Fox (by HarvettFox96).hexp  (+6 more)
Level_Scripts/: Compile SMB1.bat
Music/: + 007 + Music 02.hexp  + 007 + Music 04.hexp  + 007 + Music 06.hexp  + 007 + Music 09.hexp  + 007 + Stomp.hexp  + 007 + TC03.hexp  + 007 + TC05.hexp  + 007 + TC1.hexp  + 007 + TC2.hexp  + 007 + TC4.hexp  + Enigmario + TC01.hexp  + Enigmario + TC02.hexp  + Enigmario + TC03.hexp  + Enigmario + TC4.hexp  + Final Strikyu + TC04.hexp  + Final Strikyu + TC3.hexp  + Flower Mario + TC02.hexp  + Flower Mario + TC04.hexp  + Flower Mario + TC1.hexp  + Flower Mario + TC3.hexp  + Mr. Sandman! + TC04.hexp  + Mr. Sandman! + TC1.hexp  + Mr. Sandman! + TC2.hexp  + Mr. Sandman! + TC3.hexp  + Music 01 + Music 03.hexp  + Music 01 + TC01.hexp  + Music 01 + TC02.hexp  + Music 01 + TC3.hexp  + Music 01 + TC4.hexp  + Music 02 + Music 03.hexp  + Music 02 + Super Mario Evolution.hexp  + Music 02 + TC02.hexp  + Music 02 + Techno! Mario Bros [W,S].hexp  + Music 04 + Stomp.hexp  + Music 04 + TC03.hexp  + Music 04 + TC04.hexp  + Music 04 + Techno! Mario Bros [W,S].hexp  + Music 05 + TC02.hexp  + Music 05 + TC1.hexp  + Music 05 + TC3.hexp  (+118 more)
Text/: Castle.txt  Princess.txt  Thank you.txt
Tools/Graphics_Ripper/: Blacklist.cpp  Blacklist.h  CMakeLists.txt  Duplicate_Remover.cpp  Duplicate_Remover.h  Graphics_Ripper.cpp  Graphics_Ripper.h  Graphics_Ripper.pro  main.cpp
Tools/Graphics_Ripper/Build_Scripts/Unix/: Prepare_Runtime.sh
Tools/Graphics_Ripper/Build_Scripts/Windows/: Prepare_Runtime.bat
Tools/Level_Ripper/: CMakeLists.txt  Coordinates.cpp  Coordinates.h  Enemy_Parser.cpp  Enemy_Parser.h  Level_Ripper.pro  Object_Parser.cpp  Object_Parser.h  main.cpp
Tools/Palette_Tile_Importer/: CMakeLists.txt  Palette_Tile_Importer.pro  main.cpp
Tools/Pattern_Creator/: CMakeLists.txt  Graphics_Question_Block.cpp  Graphics_Question_Block.h  Main_Window.cpp  Main_Window.h  Main_Window.ui  Object_Block.cpp  Object_Block.h  Palette.h  Palettes.cpp  Palettes.h  Pattern_Creator.pro  ROM_Reader.cpp  ROM_Reader.h  Sprite_Block.cpp  Sprite_Block.h  Tile.cpp  Tile.h  Weather.h  main.cpp
Tools/Word_Sorter/: CMakeLists.txt  main.cpp
(+2371 files in other folders)
